# PromptedCRE

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLAN.md  README.md  TODOS.md  index.html  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
Landing Page/: README.md
Landing Page/app/: opengraph-image.tsx
Landing Page/components/: faq-section.tsx  how-it-works.tsx  positioning-strip.tsx  repo-features.tsx  why-section.tsx
agent/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  memory.md  memory.template.md
agent/examples/: sample-loi.md
agent/playbook/: loi-to-docx.py
agent/templates/: comparison-matrix.md  property-card.md  requirement.md
app/: layout.tsx
components/: faq-section.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works.tsx  human-support.tsx  positioning-strip.tsx  repo-features.tsx  unlock-repo.tsx  why-section.tsx
eval/: README.md  program.md  rubric.md  run.sh  scenario-protech.md
eval/logs/: 2026-03-29-1610-intake.md  2026-03-29-1616-search-filters.md  2026-03-29-1623-property-survey.md  2026-03-29-1631-comparison.md  2026-03-29-1648-landlord-questions.md  2026-03-29-1648-loi-review.md  2026-03-29-1648-tour-prep.md
examples/: sample_property_1.json  sample_property_2.json  sample_requirement.json
feedback/: DOGFOOD-SCORECARD.md
landing/: README.md
landing/app/: globals.css  page.tsx
landing/components/: faq-section.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works.tsx  human-support.tsx  repo-features.tsx  sample-output.tsx  unlock-repo.tsx
landing/data/: sample-outputs.json
platform/: package-lock.json  package.json
repo/: 00-quick-start.md  CHANGELOG.md  MARKET-CONTEXT.md  README.md
tests/: test_cli_flow.py
(+75 files in other folders)
