[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptedcre"
version = "0.2.0"
description = "AI agent for industrial real estate — intake, search, compare, tour, deal, memo"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "William Alcorn"}]
dependencies = []

[project.scripts]
tenant-rep = "tenant_rep.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
