[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptedcre"
version = "0.2.0"
description = "Free AI agent that gives manufacturers, operators, and industrial founders the real estate firepower they deserve"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "William Alcorn"}]
dependencies = []

[project.scripts]
promptedcre = "tenant_rep.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
